nuevas mejoras al servicio usuario

--- a/src/app/components/checkout-in/checkout-in.component.html
+++ b/src/app/components/checkout-in/checkout-in.component.html
@@ -131,7 +131,7 @@
              <button class="btn btn-default  btn-block" type="button" data-toggle="collapse" data-target="#transferencia" aria-expanded="false" aria-controls="transferencia">
                       Transferencia Bancaria
               </button>
-               <p class="p-botnes">Tranfiere directamente a nuestra cuenta y envia el comprobante a xxxx@bremsen.cl</p>
+               <p class="p-botnes">Tranfiere directamente a nuestra cuenta y envia el comprobante a ventas@bremsen.cl</p>
 
 
 
