--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -212,7 +212,7 @@
                           <option *ngFor="let stock of producto.STOCK" [value]="stock.codigo" [selected]="stock.codigo == 4">{{stock.nombre}}</option>
                         </select>
             
-                        <div *ngIf="producto.STOCK[0].codigo==0" class="help-block">Sin Stock</div>
+                        <div  class="help-block">Sin Stock</div>
                         <div *ngIf="cantidadValido" class="help-block">Debe seleccionar una cantidad</div>
             
                       </td>
@@ -241,12 +241,12 @@
                     </tr>
                     <tr style="text-align:right; ">
                       <td>
-                        <button *ngIf="producto.STOCK[0].codigo>0" type="button" class="btn btn-default bremsen " (click)="agregarCarro(1,selectCantidad.value,producto.ID)">Comprar</button>
+                        <button type="button" class="btn btn-default bremsen " (click)="agregarCarro(1,selectCantidad.value,producto.ID)">Comprar</button>
                       </td>
                       <td>
             
-                        <button *ngIf="producto.STOCK[0].codigo==0" type="button" class="btn btn-default bremsen " routerLink="/producto/{{producto.ID}}">Ver producto</button>
-                        <button *ngIf="producto.STOCK[0].codigo>0" type="button" class="btn btn-primary" (click)="agregarCarro(2,selectCantidad.value,producto.ID)">
+                        <!--button  type="button" class="btn btn-default bremsen " routerLink="/producto/{{producto.ID}}">Ver producto</button-->
+                        <button type="button" class="btn btn-primary" (click)="agregarCarro(2,selectCantidad.value,producto.ID)">
                           <i class="fa fa-plus" aria-hidden="true"></i> Carro
                         </button>
                       </td>
@@ -315,16 +315,25 @@
     </div>
   </div>
   <script>
-                        $('#myModal').on('shown.bs.modal', function () {
-                        $('#myInput').focus()
-                      })
-                    </script>
-<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-                        <div class="modal-dialog modal-sm" role="document" >
-                          <div class="modal-content" style="padding-left: 8px;">
-                            <div class="modal-header"> <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" style="font-size: 33px; color: #fff !important;">×</span></button>  </div><br>
-                            <h3 style="color: #fff !important;">Producto agregado al carro</h3>
-                            <div class="pad-10">&nbsp;</div>
-                             </div>
-                        </div>
-                    </div>
+    $('#myModal').on('shown.bs.modal', function () {
+      $('#myInput').focus()
+    })
+  </script>
+<button id="openModalButton" [hidden]="true" data-toggle="modal" data-target="#myModal">Open Modal</button>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Sumando al carro</h4>
+      </div>
+      <div class="modal-body">
+        <h1>Producto agregado</h1>
+      </div>
+
+    </div>
+  </div>
+</div>
