se agregan nuevas mejoras

--- a/src/app/components/carro/carro.component.html
+++ b/src/app/components/carro/carro.component.html
@@ -112,7 +112,19 @@
 
    				 </div>
 
-    <div class="col-md-6">&nbsp;</div>
+    <div class="col-md-6">
+      <div class="bs-callout bs-callout-info" id="callout-navs-tabs-plugin" style="
+          width: 80%;
+          text-align: center;
+          margin-top: 70px;
+          margin-left: 50px;
+          border: 1px solid #000;
+      ">
+        <h4>Recuerda que los servicios de instalación solo aplican para 1 vehículo.</h4>
+        <p>Para instalación en 2 o más vehículos llamanos al
+          <br> +569 89568901</p>
+      </div>
+    </div>
 
     <div class="col-md-12" *ngIf="activaInstalacion">
             <div *ngIf="activaErrorNoDisponible" style="font-size: 20px;  text-align: center; padding-top: 39px; padding-bottom: 18px; color: #4a4a4a;">
